--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,25 +9,56 @@
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
   <header class="header">
+
     <figure class="header__logo">
       <img src="assets/img/logo.png" alt="Logo" class="header__img">
     </figure>
+
     <nav class="header__menu menu">
       <ul class="menu__list">
         <li class="menu__links"><a href="index.html" class="menu__link">Início</a></li>
-        <li class="menu__links"><a href="index.html" class="menu__link">Sore nós</a></li>
+        <li class="menu__links"><a href="about.html" class="menu__link">Sore nós</a></li>
         <li class="menu__links"><a href="index.html" class="menu__link">Cães</a></li>
         <li class="menu__links"><a href="index.html" class="menu__link">Gatos</a></li>
         <li class="menu__links"><a href="index.html" class="menu__link">Pássaros</a></li>
       </ul>
     </nav>
+
+    <main class="main">
+      <div class="main__content">
+        <article class="main__post">
+          <a href="#" class="main__title">Cuidado com os animais durante a quarentena</a>
+          <div class="main__subtitle">
+            <p class="main__date">28/08/2020</p>
+            <span class="main__tag">Cães</span>
+          </div>
+          <div class="main__details">
+            <img src="assets/img/dog.jpg" alt="Cachorro" class="main__img">
+            <p class="main__description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. </p>
+            <a href="#" class="main__btn">Ler mais</a>
+            <div class="main__info">
+              <div class="main__author">
+                <p class="main__p">by Alura</p>
+              </div>
+              <div class="main__comments">
+                <a href="#" class="main__a">2 comentários</a>
+              </div>
+            </div>
+          </div>
+        </article>
+      </div>
+    </main>
+
   </header>
+
   <footer class="footer">
     <img src="assets/img/footer-logo.png" alt="Footer logo" class="footer__logo">
     <p class="footer__txt">2021 Gatito Blog. All rights reserved.</p>
   </footer>
-  
+
 </body>
+
 </html>
