--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
       <img src="assets/img/dog-cat.jpg" alt="Dog and Cat" class="about__img">
       <p class="about__intro">Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
       <div class="about__split">
-        <img src="assets/img/about.png" alt="Gatito" class="about__img2">
+        <img src="assets/img/about.png" alt="Gatito" class="about__img-description">
         <div class="about__txt">
           <p class="about__p">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
           <p class="about__p">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
