--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <main class="main">
       <div class="main__content">
         <article class="main__post">
-          <a href="#" class="main__title">Cuidado com os animais durante a quarentena</a>
+          <a href="article.html" class="main__title">Cuidado com os animais durante a quarentena</a>
           <div class="main__subtitle">
             <p class="main__date">28/08/2020</p>
             <span class="main__tag">Cães</span>
@@ -49,6 +49,34 @@
             </div>
           </div>
         </article>
+      </div>
+      <div class="main__sidebar sidebar">
+        <aside class="sidebar__top">
+          <p class="sidebar__title">Top posts</p>
+          <ul class="sidebar__posts">
+            <li class="sidebar__list">
+              <img src="assets/img/cat.jpg" alt="Gato" class="sidebar__img">
+              <div class="sidebar__details">
+                <a href="article.html" class="sidebar__post-title">Adotar um gato: tudo o que você precisa saber</a>
+                <p class="sidebar__post-date">15/08/2020</p>
+              </div>
+            </li>
+            <li class="sidebar__list">
+              <img src="assets/img/car.jpg" alt="Cachorro na janela do carro" class="sidebar__img">
+              <div class="sidebar__details">
+                <a href="article.html" class="sidebar__post-title">Vou viajar! o que colocar na mala para o pet?</a>
+                <p class="sidebar__post-date">12/08/2020</p>
+              </div>
+            </li>
+            <li class="sidebar__list">
+              <img src="assets/img/party.jpg" alt="Cachorro com chapéu de aniversário" class="sidebar__img">
+              <div class="sidebar__details">
+                <a href="article.html" class="sidebar__post-title">Dicas para comemorar o aniversário do seu pet</a>
+                <p class="sidebar__post-date">09/08/2020</p>
+              </div>
+            </li>
+          </ul>
+        </aside>
       </div>
     </main>
 
